# goit-ds-hw-01

./: Dockerfile  README.md  pyproject.toml
clipack/: classes.py  main.py
clipack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
