[tool.poetry]
name = "goit-ds-hw-01"
version = "0.1.0"
description = ""
authors = ["ShataUA <113193034+ShataUA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
colorama = "0.4.6"
setuptools = "68.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
